--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "aws-sdk": "^2.1692.0",
+    "cheerio": "^1.0.0",
     "gsap": "^3.12.5",
     "next": "15.1.3",
+    "openai": "^4.80.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "wavesurfer.js": "^7.8.14"
