--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "brainrot-publishing-house",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:strict": "eslint --max-warnings=0 ."
   },
   "dependencies": {
     "aws-sdk": "^2.1692.0",
@@ -19,10 +21,18 @@
     "wavesurfer.js": "^7.8.14"
   },
   "devDependencies": {
+    "@eslint/js": "^9.25.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@typescript-eslint/eslint-plugin": "^8.31.0",
+    "@typescript-eslint/parser": "^8.31.0",
     "autoprefixer": "^10.4.20",
+    "eslint": "^9.25.1",
+    "eslint-config-next": "^15.3.1",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
