feat(storage): create BlobService utility class
- Create BlobService class with unified interface for Blob storage operations
- Implement methods for file/text upload, listing, info retrieval, and deletion
- Add type definitions for all service operations
- Create unit tests for all BlobService methods
- Update documentation with BlobService usage examples
- Add NEXT_PUBLIC_BLOB_BASE_URL to environment variables

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,5 +1,6 @@
 # Vercel Blob Storage
 BLOB_READ_WRITE_TOKEN=your_vercel_blob_token_here
+NEXT_PUBLIC_BLOB_BASE_URL=https://public.blob.vercel-storage.com
 
 # Existing S3/Spaces Config
 SPACES_ENDPOINT=your_spaces_endpoint
