--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "lint:strict": "eslint --max-warnings=0 ."
+    "lint:strict": "eslint --max-warnings=0 .",
+    "inventory": "tsx scripts/inventory-assets.ts",
+    "inventory:md": "tsx scripts/inventory-assets.ts --format=md --output=asset-inventory.md",
+    "migrate:cover-images": "tsx scripts/migrateBookCoverImages.ts",
+    "migrate:cover-images:dry": "tsx scripts/migrateBookCoverImages.ts --dry-run"
   },
   "dependencies": {
     "@vercel/blob": "^1.0.0",
@@ -36,6 +40,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
+    "tsx": "^4.19.3",
     "typescript": "^5"
   }
 }
