feat(migration): add brainrot text files migration script
- Create script to migrate brainrot text files to Vercel Blob
- Handle different caching headers for text content (1-hour cache)
- Support dry run and selective migration options
- Add migration log for resumability
- Update documentation and add npm scripts

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "migrate:cover-images": "tsx scripts/migrateBookCoverImages.ts",
     "migrate:cover-images:dry": "tsx scripts/migrateBookCoverImages.ts --dry-run",
     "migrate:chapter-images": "tsx scripts/migrateBookChapterImages.ts",
-    "migrate:chapter-images:dry": "tsx scripts/migrateBookChapterImages.ts --dry-run"
+    "migrate:chapter-images:dry": "tsx scripts/migrateBookChapterImages.ts --dry-run",
+    "migrate:brainrot-text": "tsx scripts/migrateBrainrotTextFiles.ts",
+    "migrate:brainrot-text:dry": "tsx scripts/migrateBrainrotTextFiles.ts --dry-run"
   },
   "dependencies": {
     "@vercel/blob": "^1.0.0",
