--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "start": "next start",
     "lint": "next lint",
     "lint:strict": "eslint --max-warnings=0 .",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "inventory": "tsx scripts/inventory-assets.ts",
     "inventory:md": "tsx scripts/inventory-assets.ts --format=md --output=asset-inventory.md",
     "migrate:cover-images": "tsx scripts/migrateBookCoverImages.ts",
@@ -33,6 +36,10 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.1",
+    "@jest/globals": "^29.7.0",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^15.0.0",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -44,8 +51,11 @@
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
+    "ts-jest": "^29.1.2",
     "tsx": "^4.19.3",
     "typescript": "^5"
   }
