--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "migrate:brainrot-text": "tsx scripts/migrateBrainrotTextFiles.ts",
     "migrate:brainrot-text:dry": "tsx scripts/migrateBrainrotTextFiles.ts --dry-run",
     "migrate:source-text": "tsx scripts/migrateSourceTextFiles.ts",
-    "migrate:source-text:dry": "tsx scripts/migrateSourceTextFiles.ts --dry-run"
+    "migrate:source-text:dry": "tsx scripts/migrateSourceTextFiles.ts --dry-run",
+    "verify:blob": "tsx scripts/verifyBlobStorage.ts"
   },
   "dependencies": {
     "@vercel/blob": "^1.0.0",
@@ -37,8 +38,8 @@
   "devDependencies": {
     "@eslint/js": "^9.25.1",
     "@jest/globals": "^29.7.0",
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^15.0.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^15.0.7",
     "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -55,7 +56,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
-    "ts-jest": "^29.1.2",
+    "ts-jest": "^29.3.2",
     "tsx": "^4.19.3",
     "typescript": "^5"
   }
