feat(blob): add asset cleanup tool for post-migration cleanup
- Create script to safely remove local assets after successful Blob migration
- Add dry-run mode and interactive confirmation for safety
- Include comprehensive test coverage for cleanup functionality
- Add documentation for cleanup process with safeguards
- Update TSX and Jest configurations for proper testing
- Add npm scripts for easy execution of cleanup tool

--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "migrate:brainrot-text:dry": "tsx scripts/migrateBrainrotTextFiles.ts --dry-run",
     "migrate:source-text": "tsx scripts/migrateSourceTextFiles.ts",
     "migrate:source-text:dry": "tsx scripts/migrateSourceTextFiles.ts --dry-run",
-    "verify:blob": "tsx scripts/verifyBlobStorage.ts"
+    "verify:blob": "tsx scripts/verifyBlobStorage.ts",
+    "cleanup:assets": "tsx scripts/cleanupLocalAssets.ts",
+    "cleanup:assets:delete": "tsx scripts/cleanupLocalAssets.ts --delete"
   },
   "dependencies": {
     "@vercel/blob": "^1.0.0",
