--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@vercel/blob": "^1.0.0",
     "aws-sdk": "^2.1692.0",
     "cheerio": "^1.0.0",
+    "dotenv": "^16.5.0",
     "gsap": "^3.12.5",
     "next": "15.1.3",
     "openai": "^4.80.1",
