--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cleanup:assets:delete": "tsx scripts/cleanupLocalAssets.ts --delete"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.797.0",
     "@vercel/blob": "^1.0.0",
     "aws-sdk": "^2.1692.0",
     "cheerio": "^1.0.0",
@@ -58,6 +59,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.49",
+    "puppeteer": "^24.7.2",
     "tailwindcss": "^3.4.17",
     "ts-jest": "^29.3.2",
     "tsx": "^4.19.3",
