chore: preserve important asset files in docs/assets-reference
Before removing the entire assets directory, preserve important files:
- Copy README.md with brainrot translation context
- Save extract_chapters.py script
- Preserve Iliad introduction and translator's preface
- Update .gitignore to exclude public/assets directory

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,6 @@ placeholder-deletion-results.json
 
 # credentials and config
 aws-do-config.ini
+
+# local assets (migrated to blob storage)
+/public/assets/
