chore: update .gitignore with .tool-versions and backups directory

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,9 @@ aws-do-config.ini
 
 # local assets (migrated to blob storage)
 /public/assets/
+
+# local environment configuration
+.tool-versions
+
+# backups
+/backups/
