--- a/package.json
+++ b/package.json
@@ -67,12 +67,15 @@
     "autoprefixer": "^10.4.20",
     "eslint": "^9.25.1",
     "eslint-config-next": "^15.3.1",
+    "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prettier": "^5.2.6",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.49",
+    "prettier": "^3.5.3",
     "puppeteer": "^24.7.2",
     "tailwindcss": "^3.4.17",
     "ts-jest": "^29.3.2",
