chore: add prettier npm scripts to package.json
- Add prettier:check script to check code formatting
- Add prettier:fix script to automatically fix formatting issues
- Add format script as an alias for prettier:fix
- Update documentation in TODO.md

--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "start": "next start",
     "lint": "next lint",
     "lint:strict": "eslint --max-warnings=0 .",
+    "prettier:check": "prettier --check .",
+    "prettier:fix": "prettier --write .",
+    "format": "npm run prettier:fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
