--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,14 +5,16 @@
     "plugin:react/recommended",
     "plugin:react-hooks/recommended",
     "plugin:jsx-a11y/recommended",
-    "next/core-web-vitals"
+    "next/core-web-vitals",
+    "prettier"
   ],
   "parser": "@typescript-eslint/parser",
   "plugins": [
     "@typescript-eslint",
     "react",
     "react-hooks",
-    "jsx-a11y"
+    "jsx-a11y",
+    "prettier"
   ],
   "rules": {
     "no-console": ["warn", { "allow": ["warn", "error"] }],
@@ -30,7 +32,8 @@
     "max-depth": ["warn", 4],
     "max-nested-callbacks": ["warn", 3],
     "max-params": ["warn", 4],
-    "complexity": ["warn", 10]
+    "complexity": ["warn", 10],
+    "prettier/prettier": ["error", {}, { "usePrettierrc": true }]
   },
   "settings": {
     "react": {
