--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@jest/globals": "^29.7.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^15.0.7",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^19",
