--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@typescript-eslint/parser": "^8.31.0",
     "autoprefixer": "^10.4.20",
     "babel-jest": "^29.7.0",
+    "babel-plugin-transform-import-meta": "^2.3.2",
     "eslint": "^9.25.1",
     "eslint-config-next": "^15.3.1",
     "eslint-config-prettier": "^10.1.2",
@@ -83,6 +84,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-ts-webcompat-resolver": "^1.0.1",
     "postcss": "^8.4.49",
     "prettier": "^3.5.3",
     "puppeteer": "^24.7.2",
