feat: implement pre-commit hooks for linting and formatting
- Install and configure Husky for Git hooks management
- Add lint-staged to run ESLint and Prettier on staged files
- Add pre-commit hook to run lint-staged before each commit
- Update .gitignore to include .husky directory
- Create documentation for pre-commit hooks
- Mark T10 as completed in TODO.md

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,9 @@ yarn-error.log*
 # vercel
 .vercel
 
+# Don't ignore Husky hooks
+!.husky/
+
 # typescript
 *.tsbuildinfo
 next-env.d.ts
@@ -73,3 +76,5 @@ aws-do-config.ini
 
 # backups
 /backups/
+
+**/.claude/settings.local.json
