--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "migrate:source-text:dry": "tsx scripts/migrateSourceTextFiles.ts --dry-run",
     "verify:blob": "tsx scripts/verifyBlobStorage.ts",
     "cleanup:assets": "tsx scripts/cleanupLocalAssets.ts",
-    "cleanup:assets:delete": "tsx scripts/cleanupLocalAssets.ts --delete"
+    "cleanup:assets:delete": "tsx scripts/cleanupLocalAssets.ts --delete",
+    "setup:hooks": "bash scripts/setup-hooks.sh",
+    "prepare": "husky"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.797.0",
@@ -83,10 +85,12 @@
     "eslint-plugin-prettier": "^5.2.6",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "husky": "^9.1.7",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-ts-webcompat-resolver": "^1.0.1",
+    "lint-staged": "^15.5.1",
     "postcss": "^8.4.49",
     "prettier": "^3.5.3",
     "puppeteer": "^24.7.2",
@@ -94,5 +98,14 @@
     "ts-jest": "^29.3.2",
     "tsx": "^4.19.3",
     "typescript": "^5"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,css,md}": [
+      "prettier --write"
+    ]
   }
 }
