chore: update gitignore and add git hooks implementation
- Add git hooks setup script and documentation
- Update gitignore to exclude thinktank directories, planning files, and auto-generated glance docs
- Include package-lock.json changes from hooks dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -77,4 +77,14 @@ aws-do-config.ini
 # backups
 /backups/
 
+# thinktank directories
+thinktank_*/
+
+# planning files
+*-plan.md
+
+# glance documentation files
+glance.md
+**/glance.md
+
 **/.claude/settings.local.json
