build: update lint-staged config to handle symlinked markdown files
Modify lint-staged configuration to conditionally run prettier only on non-symlinked
markdown files. This enables proper handling of symlinked documentation files without
bypassing pre-commit hooks.

--- a/.prettierignore
+++ b/.prettierignore
@@ -82,3 +82,7 @@ custom-text-migration.json
 
 # Project-specific files
 T*-audio-url-verification.json
+
+# Symlinks
+docs/DEVELOPMENT_PHILOSOPHY_APPENDIX_TYPESCRIPT.md
+docs/DEVELOPMENT_PHILOSOPHY_APPENDIX_FRONTEND.md
