fix: configure Jest environment for all test files

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,12 +12,23 @@
   "plugins": ["@typescript-eslint", "react", "react-hooks", "jsx-a11y", "prettier"],
   "overrides": [
     {
-      "files": ["**/*.test.ts", "**/*.test.tsx", "**/*.spec.ts", "**/*.spec.tsx"],
+      "files": [
+        "**/*.test.ts",
+        "**/*.test.tsx",
+        "**/*.spec.ts",
+        "**/*.spec.tsx",
+        "**/*.test.js",
+        "**/__mocks__/**/*.js"
+      ],
+      "env": {
+        "jest": true
+      },
       "rules": {
         "max-lines-per-function": [
           "warn",
           { "max": 500, "skipBlankLines": true, "skipComments": true }
-        ]
+        ],
+        "@typescript-eslint/no-require-imports": "off"
       }
     }
   ],
