--- a/.github/workflows/vendor-docs.yml
+++ b/.github/workflows/vendor-docs.yml
@@ -4,13 +4,11 @@ on:
   push:
     branches:
       - master
+permissions:
+  contents: write
+  pull-requests: write
 jobs:
   docs:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Sync Leyline Docs
-        uses: phrazzld/leyline/.github/workflows/vendor.yml@v0.1.0
-        with:
-          ref: v0.1.0
-
+    uses: phrazzld/leyline/.github/workflows/vendor.yml@v0.1.0
+    with:
+      ref: v0.1.0
