--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.797.0",
+    "@aws-sdk/s3-request-presigner": "^3.802.0",
     "@vercel/blob": "^1.0.0",
     "@wavesurfer/react": "^1.0.11",
     "aws-sdk": "^2.1692.0",
