--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "gsap": "^3.12.5",
     "next": "^15.3.1",
     "openai": "^4.80.1",
+    "pino": "^9.6.0",
+    "pino-pretty": "^13.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "wavesurfer.js": "^7.8.14"
