--- a/.gitignore
+++ b/.gitignore
@@ -32,10 +32,7 @@ yarn-error.log*
 
 # env files
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.*
 # allow example env files
 !.env.*.example
 
