--- a/package.json
+++ b/package.json
@@ -51,6 +51,15 @@
     "reorganize:blob": "tsx scripts/reorganize-blob-paths.ts",
     "reorganize:blob:dry": "tsx scripts/reorganize-blob-paths.ts --dry-run",
     "reorganize:blob:verbose": "tsx scripts/reorganize-blob-paths.ts --verbose",
+    "audit:text": "tsx scripts/auditTextAssets.ts",
+    "audit:text:verbose": "tsx scripts/auditTextAssets.ts --verbose",
+    "audit:image": "tsx scripts/auditImageAssets.ts",
+    "audit:image:verbose": "tsx scripts/auditImageAssets.ts --verbose",
+    "audit:audio": "tsx scripts/auditAudioAssets.ts",
+    "audit:audio:verbose": "tsx scripts/auditAudioAssets.ts --verbose",
+    "audit:all": "npm run audit:text && npm run audit:image && npm run audit:audio",
+    "plan:reorganization": "tsx scripts/generateReorganizationPlan.ts",
+    "plan:reorganization:verbose": "tsx scripts/generateReorganizationPlan.ts --verbose",
     "prepare": "husky"
   },
   "dependencies": {
