--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     "audit:all": "npm run audit:text && npm run audit:image && npm run audit:audio",
     "plan:reorganization": "tsx scripts/generateReorganizationPlan.ts",
     "plan:reorganization:verbose": "tsx scripts/generateReorganizationPlan.ts --verbose",
+    "test:e2e:downloads": "tsx scripts/verify-end-to-end-downloads.ts",
+    "test:e2e:downloads:production": "tsx scripts/verify-end-to-end-downloads.ts --env=production",
     "prepare": "husky"
   },
   "dependencies": {
