feat(download): refactor download service for improved error handling and performance
- Update DownloadButton component to use new service
- Add proxy download capability for improved reliability
- Implement comprehensive end-to-end testing
- Add asset name validation
- Add technical debt tasks to TODO.md for linting issues

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,7 +28,8 @@
           "warn",
           { "max": 500, "skipBlankLines": true, "skipComments": true }
         ],
-        "@typescript-eslint/no-require-imports": "off"
+        "@typescript-eslint/no-require-imports": "off",
+        "max-nested-callbacks": ["warn", 6]
       }
     }
   ],
