feat(T032): implement text file naming standardization
- Added standardizeChapterIdentifier to AssetNameValidator for Roman numeral conversion
- Enhanced AssetPathService with convertLegacyPath for path standardization
- Created standardizeTextFiles.ts and standardizeTextFilesBlob.ts migration scripts
- Added fetchTextWithFallback to getBlobUrl.ts for backward compatibility
- Added comprehensive tests for text path conversion and fallback loading
- Created UNIFIED_ASSET_NAMING.md documentation
- Added npm scripts for text standardization operations

This implementation ensures consistent text file naming across all books while maintaining backward compatibility during the transition period.

--- a/package.json
+++ b/package.json
@@ -69,6 +69,16 @@
     "benchmark:downloads:production": "tsx scripts/benchmark-downloads.ts --env=production",
     "verify:migration": "tsx scripts/verify-migration-completion.ts",
     "verify:migration:production": "tsx scripts/verify-migration-completion.ts --env=production",
+    "migrate:full-audiobooks": "tsx scripts/migrateFullAudiobooks.ts",
+    "migrate:full-audiobooks:dry": "tsx scripts/migrateFullAudiobooks.ts --dry-run",
+    "migrate:full-audiobooks:verbose": "tsx scripts/migrateFullAudiobooks.ts --verbose",
+    "standardize:text": "tsx scripts/standardizeTextFiles.ts",
+    "standardize:text:dry": "tsx scripts/standardizeTextFiles.ts --dry-run",
+    "standardize:text:verbose": "tsx scripts/standardizeTextFiles.ts --dry-run --log-file=text-standardization-dry-run.log",
+    "standardize:text:production": "tsx scripts/standardizeTextFiles.ts --log-file=text-standardization.log",
+    "standardize:text:blob": "tsx scripts/standardizeTextFilesBlob.ts",
+    "standardize:text:blob:dry": "tsx scripts/standardizeTextFilesBlob.ts --dry-run",
+    "standardize:text:blob:verbose": "tsx scripts/standardizeTextFilesBlob.ts --dry-run --log-file=text-standardization-blob-dry-run.log",
     "tsc": "tsc --noEmit",
     "prepare": "husky"
   },
