feat(T036): organize audio files and verify downloads
- Created verifyAudioFilesAccess.ts script to verify audio file existence and accessibility
- Implemented testAudioFileDownloads.ts for comprehensive download testing
- Created AUDIO_FILE_ORGANIZATION.md documentation for audio file structure and access
- Added new npm scripts for audio verification and testing

--- a/package.json
+++ b/package.json
@@ -80,6 +80,10 @@
     "standardize:text:blob:dry": "tsx scripts/standardizeTextFilesBlob.ts --dry-run",
     "standardize:text:blob:verbose": "tsx scripts/standardizeTextFilesBlob.ts --dry-run --log-file=text-standardization-blob-dry-run.log",
     "verify:text": "tsx scripts/verifyTextMigration.ts",
+    "verify:audio-files": "tsx scripts/verifyAudioFilesAccess.ts",
+    "verify:audio-files:skip-check": "tsx scripts/verifyAudioFilesAccess.ts --skip-access-check",
+    "test:audio-downloads": "tsx scripts/testAudioFileDownloads.ts",
+    "test:audio-downloads:production": "tsx scripts/testAudioFileDownloads.ts --env=production",
     "tsc": "tsc --noEmit",
     "prepare": "husky"
   },
