feat(scripts): complete TypeScript configuration for script files (T062)
- Update scripts/tsconfig.json with proper module resolution and flexibility
- Add ESLint overrides for script files with relaxed complexity limits
- Enable downlevelIteration to fix Set iteration issues
- Configure permissive typing for utility/migration scripts
- Allow console statements and larger functions in scripts directory

Scripts now have appropriate TypeScript and linting configuration
that balances type safety with practical flexibility for utility code.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,28 @@
         "@typescript-eslint/no-require-imports": "off",
         "max-nested-callbacks": ["warn", 6]
       }
+    },
+    {
+      "files": ["scripts/**/*.ts", "scripts/**/*.js"],
+      "rules": {
+        "@typescript-eslint/no-explicit-any": "off",
+        "@typescript-eslint/no-non-null-assertion": "off",
+        "max-lines": ["warn", { "max": 1000, "skipBlankLines": true, "skipComments": true }],
+        "max-lines-per-function": [
+          "warn",
+          {
+            "max": 300,
+            "skipBlankLines": true,
+            "skipComments": true,
+            "IIFEs": true
+          }
+        ],
+        "max-depth": ["warn", 6],
+        "max-nested-callbacks": ["warn", 5],
+        "max-params": ["warn", 6],
+        "complexity": ["warn", 15],
+        "no-console": "off"
+      }
     }
   ],
   "rules": {
