refactor: reorganize project structure and archive historical data
- Create archive/ directory for historical migration data and reports
- Move migration JSON files, logs, and reports to archive/migration-data/
- Move verification reports to archive/reports/
- Move monitoring configs to docs/monitoring/
- Update .gitignore to handle archive and build artifacts better
- Remove redundant postcss.config.cjs (kept .mjs for ES modules)
- Archive temporary files and deprecated refactoring plans
- Complete BACKLOG.md migration to GitHub issues

This reorganization reduces root directory clutter from 50+ files to 30 files,
improving project navigability while preserving important historical data.

--- a/.gitignore
+++ b/.gitignore
@@ -96,4 +96,9 @@ glance.md
 **/glance.md
 
 **/.claude/settings.local.json
-test-reports/
+
+# archive directory (for historical data)
+/archive/temp-files/
+
+# coverage directory (if not already ignored)
+coverage/
